--- a/src/app/features/home-page/home-page.component.html
+++ b/src/app/features/home-page/home-page.component.html
@@ -40,13 +40,14 @@
             <div #scroller class="media-scroller snaps-inline bg-white overflow-x-auto whitespace-nowrap flex">
                 <div *ngFor="let item of listSanBong" class="flex-shrink-0 w-[300px] shadow-shadow-timeword mx-2 rounded-md">
                     <div class="w-[300px] h-[200px]">
-                        <img class="object-cover w-full h-full rounded-tl-md rounded-tr-md" [src]="item.img"/>
+                        <img class="object-cover w-full h-full rounded-tl-md rounded-tr-md" [src]="item.image"/>
                     </div>
                     <div class="flex flex-col p-4">
                         <div class="text-[#000] text-[18px] font-semibold">{{ item.name }}</div>
                         <div class="text-[#7D7D7D] text-[14px]"><i class="fa-solid fa-location-dot"></i> {{ item.address }}</div>
                         <div class="text-[#000] font-normal text-[15px] mt-3">Thể loại: {{ item.facilityType }}</div>
-                        <div class="text-[#000] font-normal text-[15px] mt-1"> Mô tả: {{ item.description }}</div>
+                        <div *ngIf="item.description.length > 32" class="text-[#000] font-normal text-[15px] mt-1"> Mô tả: {{ item.description.substring(0, 32) + '...'}}</div>
+                        <div *ngIf="item.description.length <= 32" class="text-[#000] font-normal text-[15px] mt-1"> Mô tả: {{ item.description }}</div>
                     </div>
                     <div class="w-full flex justify-center mb-2">
                         <div (click)="viewDetail(item.id)" class="bg-[#DF6951] hover:scale-105 py-2 px-4 text-white cursor-pointer rounded-lg w-[100px] text-center">Chi tiết</div>
