--- a/src/app/features/facility/add-facility/add-facility.component.html
+++ b/src/app/features/facility/add-facility/add-facility.component.html
@@ -3,10 +3,14 @@
         <div class="cursor-pointer hover:scale-105 hover:text-primary" [routerLink]="['/facility/list']">Quản lý sân</div>
         <div>/</div>
         <div *ngIf="!isEdit" class="text-primary">Tạo sân mới</div>
-        <div *ngIf="isEdit" class="text-primary">Chỉnh sửa sân</div>
+        <div *ngIf="isEdit" class="text-primary">Cập nhật sân</div>
     </div>
     <div class="flex-1 pt-8 px-[50px] rounded-lg overflow-y-auto">
         <form class="flex flex-col gap-2 mt-4 p-[1px] " [formGroup]="form">
+            <div *ngIf="imagePreview" class="w-full flex flex-col items-center gap-1 justify-center mb-2">
+                <img [src]="imagePreview" alt="Preview" class="max-w-[300px] max-h-[200px] object-cover border rounded">
+                <div class="mt-1 text-sm text-gray-700 italic">{{ selectedFileName }}</div>
+            </div>
             <div class="flex w-full gap-9">
                 <div class="flex flex-col flex-1">
                     <span class="mb-1">Tên sân</span>
@@ -62,6 +66,21 @@
             <div class="flex w-full gap-9">
                 <div class="flex flex-col flex-1">
                     <span class="mb-1">Ảnh sân</span>
+                    <div class="flex flex-col gap-3">
+                        <div class="flex items-center">
+                            <button type="button" class="bg-[#353535] border-none flex justify-center items-center gap-1 text-white px-4 py-2 rounded" (click)="fileInput.click()">
+                                <i class="fa-solid fa-arrow-up-from-bracket"></i>
+                                Tải ảnh
+                            </button>
+                            <input hidden type="file" #fileInput (change)="onFileSelected($event)" accept="image/*">
+                            <span *ngIf="uploadProgress > 0 && uploadProgress < 100" class="ml-3">
+                                Đang tải lên: {{ uploadProgress }}%
+                            </span>
+                        </div>
+                        <div *ngIf="form.get('imageUrl')?.value" class="text-green-600 text-sm">
+                            Ảnh đã được tải lên thành công
+                        </div>
+                    </div>
                 </div>
                 <div class="flex flex-col flex-1">
                     <span class="mb-1">Mô tả</span>
