--- a/src/app/features/list-fields/fields-list/fields-list.component.html
+++ b/src/app/features/list-fields/fields-list/fields-list.component.html
@@ -44,13 +44,15 @@
             <div *ngIf="!isLoading && listSanBong.length > 0" class="w-full grid grid-cols-3 grid-rows-2 gap-[30px] mt-8">
                 <div *ngFor="let item of listSanBong" class="flex-shrink-0 pb-2 flex flex-col grid-cols-1 shadow-shadow-timeword rounded-md">
                     <div class="w-full h-[200px]">
-                        <img class="object-cover w-full h-full rounded-tl-md rounded-tr-md" [src]="item.img"/>
+                        <img class="object-cover w-full h-full rounded-tl-md rounded-tr-md" [src]="item.image"/>
                     </div>
                     <div class="flex flex-col items-start p-4">
                         <div class="text-[#000] text-[18px] font-semibold">{{ item.name }}</div>
                         <div class="text-[#7D7D7D] text-[14px]"><i class="fa-solid fa-location-dot"></i> {{ item.address }}</div>
                         <div class="text-[#000] font-normal text-[15px] mt-3">Thể loại: {{ item.facilityType }}</div>
-                        <div class="text-[#000] font-normal text-[15px] mt-1">Mô tả: {{ item.description }}</div>
+                        <!-- <div class="text-[#000] font-normal text-[15px] mt-1">Mô tả: {{ item.description }}</div> -->
+                        <div *ngIf="item.description.length > 36" class="text-[#000] font-normal text-[15px] mt-1"> Mô tả: {{ item.description.substring(0, 36) + '...'}}</div>
+                        <div *ngIf="item.description.length <= 36" class="text-[#000] font-normal text-[15px] mt-1"> Mô tả: {{ item.description }}</div>
                     </div>
                     <div class="w-full flex justify-center">
                         <div (click)="viewDetail(item.id)" class="bg-[#DF6951] hover:scale-105 py-2 px-4 text-white cursor-pointer rounded-lg w-[100px] text-center">Chi tiết</div>
