--- a/src/app/layouts/main/main.component.html
+++ b/src/app/layouts/main/main.component.html
@@ -23,7 +23,7 @@
           <i class="fa-solid fa-volleyball"></i>
           <span class="ml-3">Quản lý sân</span>
         </li>
-        <li nz-menu-item [routerLink]="['/', 'concert']" nzMatchRouter class="menu-item">
+        <li nz-menu-item nzMatchRouter class="menu-item">
           <i class="fa-solid fa-medal"></i>
           <span class="ml-3">Quản lý sự kiện</span>
         </li>
