--- a/src/app/features/concert-by-owner/concert-by-owner-list/popup-delete/popup-delete.component.html
+++ b/src/app/features/concert-by-owner/concert-by-owner-list/popup-delete/popup-delete.component.html
@@ -7,7 +7,7 @@
               <i class="fas fa-exclamation-triangle text-2xl text-[#FFA500]"></i>
               <span class="text-[20px] font-semibold">Xác nhận</span>
             </div>
-            <div class="text-[#6B7280] text-[16px] mt-2">Bạn có chắc chắn muốn xoá sự kiện <span class="text-myRed">{{facilityItem?.name}}</span> không?</div>
+            <div class="text-[#6B7280] text-[16px] mt-2">Bạn có chắc chắn muốn xoá sự kiện <span class="text-myRed">{{eventItem?.name}}</span> không?</div>
         </div>
     </ng-template>
 
