--- a/src/app/layouts/main/main.component.html
+++ b/src/app/layouts/main/main.component.html
@@ -53,7 +53,7 @@
               <i class="fa-regular fa-user mr-2"></i>
               <span class="text-[15px]">Tài khoản</span>
             </li>
-            <li class="px-4 py-2 !leading-[120%] hover:bg-[#F0F9F2] cursor-pointer">
+            <li class="px-4 py-2 !leading-[120%] hover:bg-[#F0F9F2] cursor-pointer" [routerLink]="['/changePassword']">
               <i class="fa-solid fa-key mr-2"></i>
               <span class="text-[15px]">Đổi mật khẩu</span>
             </li>
@@ -105,7 +105,7 @@
                     <i class="fa-regular fa-user mr-2"></i>
                     <span>Tài khoản</span>
                   </li>
-                  <li class="px-4 py-2 hover:bg-[#F0F9F2] cursor-pointer">
+                  <li class="px-4 py-2 hover:bg-[#F0F9F2] cursor-pointer" [routerLink]="['/changePassword']">
                     <i class="fa-solid fa-key mr-2"></i>
                     <span>Đổi mật khẩu</span>
                   </li>
