--- a/src/app/layouts/main/main.component.html
+++ b/src/app/layouts/main/main.component.html
@@ -17,6 +17,7 @@
         </li>
       </ul>
     </div>
+    <!-- Chủ sân -->
     <div *ngIf="this.role[0] === 'FacilityOwner'" class="mt-5">
       <ul nz-menu [nzMode]="'inline'" [nzInlineCollapsed]="isCollapsed" class="border-none">
         <li nz-menu-item [routerLink]="['/', 'facility']" nzMatchRouter class="menu-item">
@@ -26,6 +27,10 @@
         <li nz-menu-item [routerLink]="['/', 'concert-by-owner']" nzMatchRouter class="menu-item">
           <i class="fa-solid fa-medal"></i>
           <span class="ml-3">Quản lý sự kiện</span>
+        </li>
+        <li nz-menu-item [routerLink]="['/', 'shedule-owner']" nzMatchRouter class="menu-item">
+          <i class="fa-regular fa-calendar-days"></i>
+          <span class="ml-3">Quản lý lịch sân</span>
         </li>
         <li nz-menu-item [routerLink]="['/', 'setting']" nzMatchRouter class="menu-item">
           <i class="fa-solid fa-gear"></i>
